--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,7 @@
 <body>
    <script src="scripts/main.js"></script> 
    <script src="scripts/beatles.js"></script>
+   <script src="scripts/github_data.js"></script>
+
 </body>
 </html>
